; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test8.c_echoConstructor.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test8.c_echoConstructor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i8*, i32, i32, i32, i8*, i32* }
%struct.TYPE_6__ = type { i32 }

@SQLITE_NOMEM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"%s%s\00", align 1
@SQLITE_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32, i8**, i32**, i8**)* @echoConstructor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @echoConstructor(i32* %0, i8* %1, i32 %2, i8** %3, i32** %4, i8** %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8**, align 8
  %12 = alloca i32**, align 8
  %13 = alloca i8**, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca %struct.TYPE_5__*, align 8
  %17 = alloca i8*, align 8
  store i32* %0, i32** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32 %2, i32* %10, align 4
  store i8** %3, i8*** %11, align 8
  store i32** %4, i32*** %12, align 8
  store i8** %5, i8*** %13, align 8
  %18 = call %struct.TYPE_5__* @sqlite3MallocZero(i32 40)
  store %struct.TYPE_5__* %18, %struct.TYPE_5__** %16, align 8
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %20 = icmp ne %struct.TYPE_5__* %19, null
  br i1 %20, label %23, label %21

21:                                               ; preds = %6
  %22 = load i32, i32* @SQLITE_NOMEM, align 4
  store i32 %22, i32* %7, align 4
  br label %138

23:                                               ; preds = %6
  %24 = load i8*, i8** %9, align 8
  %25 = bitcast i8* %24 to %struct.TYPE_6__*
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 3
  store i32 %27, i32* %29, align 8
  %30 = load i32*, i32** %8, align 8
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %31, i32 0, i32 5
  store i32* %30, i32** %32, align 8
  %33 = load i8**, i8*** %11, align 8
  %34 = getelementptr inbounds i8*, i8** %33, i64 2
  %35 = load i8*, i8** %34, align 8
  %36 = call i8* (i8*, i8*, ...) @sqlite3_mprintf(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %35)
  %37 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %38 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %37, i32 0, i32 4
  store i8* %36, i8** %38, align 8
  %39 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %40 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %39, i32 0, i32 4
  %41 = load i8*, i8** %40, align 8
  %42 = icmp ne i8* %41, null
  br i1 %42, label %48, label %43

43:                                               ; preds = %23
  %44 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %45 = bitcast %struct.TYPE_5__* %44 to i32*
  %46 = call i32 @echoDestructor(i32* %45)
  %47 = load i32, i32* @SQLITE_NOMEM, align 4
  store i32 %47, i32* %7, align 4
  br label %138

48:                                               ; preds = %23
  %49 = load i32, i32* %10, align 4
  %50 = icmp sgt i32 %49, 3
  br i1 %50, label %51, label %103

51:                                               ; preds = %48
  %52 = load i8**, i8*** %11, align 8
  %53 = getelementptr inbounds i8*, i8** %52, i64 3
  %54 = load i8*, i8** %53, align 8
  %55 = call i8* (i8*, i8*, ...) @sqlite3_mprintf(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %54)
  %56 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %57 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %56, i32 0, i32 0
  store i8* %55, i8** %57, align 8
  %58 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %59 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %58, i32 0, i32 0
  %60 = load i8*, i8** %59, align 8
  %61 = call i32 @dequoteString(i8* %60)
  %62 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %63 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %62, i32 0, i32 0
  %64 = load i8*, i8** %63, align 8
  %65 = icmp ne i8* %64, null
  br i1 %65, label %66, label %92

66:                                               ; preds = %51
  %67 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %68 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %67, i32 0, i32 0
  %69 = load i8*, i8** %68, align 8
  %70 = getelementptr inbounds i8, i8* %69, i64 0
  %71 = load i8, i8* %70, align 1
  %72 = sext i8 %71 to i32
  %73 = icmp eq i32 %72, 42
  br i1 %73, label %74, label %92

74:                                               ; preds = %66
  %75 = load i8**, i8*** %11, align 8
  %76 = getelementptr inbounds i8*, i8** %75, i64 2
  %77 = load i8*, i8** %76, align 8
  %78 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %79 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %78, i32 0, i32 0
  %80 = load i8*, i8** %79, align 8
  %81 = getelementptr inbounds i8, i8* %80, i64 1
  %82 = call i8* (i8*, i8*, ...) @sqlite3_mprintf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8* %77, i8* %81)
  store i8* %82, i8** %17, align 8
  %83 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %84 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %83, i32 0, i32 0
  %85 = load i8*, i8** %84, align 8
  %86 = call i32 @sqlite3_free(i8* %85)
  %87 = load i8*, i8** %17, align 8
  %88 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %89 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %88, i32 0, i32 0
  store i8* %87, i8** %89, align 8
  %90 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %91 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %90, i32 0, i32 1
  store i32 1, i32* %91, align 8
  br label %92

92:                                               ; preds = %74, %66, %51
  %93 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %94 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %93, i32 0, i32 0
  %95 = load i8*, i8** %94, align 8
  %96 = icmp ne i8* %95, null
  br i1 %96, label %102, label %97

97:                                               ; preds = %92
  %98 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %99 = bitcast %struct.TYPE_5__* %98 to i32*
  %100 = call i32 @echoDestructor(i32* %99)
  %101 = load i32, i32* @SQLITE_NOMEM, align 4
  store i32 %101, i32* %7, align 4
  br label %138

102:                                              ; preds = %92
  br label %103

103:                                              ; preds = %102, %48
  store i32 0, i32* %15, align 4
  br label %104

104:                                              ; preds = %118, %103
  %105 = load i32, i32* %15, align 4
  %106 = load i32, i32* %10, align 4
  %107 = icmp slt i32 %105, %106
  br i1 %107, label %108, label %121

108:                                              ; preds = %104
  %109 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %110 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %109, i32 0, i32 3
  %111 = load i32, i32* %110, align 8
  %112 = load i8**, i8*** %11, align 8
  %113 = load i32, i32* %15, align 4
  %114 = sext i32 %113 to i64
  %115 = getelementptr inbounds i8*, i8** %112, i64 %114
  %116 = load i8*, i8** %115, align 8
  %117 = call i32 @appendToEchoModule(i32 %111, i8* %116)
  br label %118

118:                                              ; preds = %108
  %119 = load i32, i32* %15, align 4
  %120 = add nsw i32 %119, 1
  store i32 %120, i32* %15, align 4
  br label %104

121:                                              ; preds = %104
  %122 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %123 = load i32*, i32** %8, align 8
  %124 = call i32 @echoDeclareVtab(%struct.TYPE_5__* %122, i32* %123)
  store i32 %124, i32* %14, align 4
  %125 = load i32, i32* %14, align 4
  %126 = load i32, i32* @SQLITE_OK, align 4
  %127 = icmp ne i32 %125, %126
  br i1 %127, label %128, label %133

128:                                              ; preds = %121
  %129 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %130 = bitcast %struct.TYPE_5__* %129 to i32*
  %131 = call i32 @echoDestructor(i32* %130)
  %132 = load i32, i32* %14, align 4
  store i32 %132, i32* %7, align 4
  br label %138

133:                                              ; preds = %121
  %134 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %135 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %134, i32 0, i32 2
  %136 = load i32**, i32*** %12, align 8
  store i32* %135, i32** %136, align 8
  %137 = load i32, i32* @SQLITE_OK, align 4
  store i32 %137, i32* %7, align 4
  br label %138

138:                                              ; preds = %133, %128, %97, %43, %21
  %139 = load i32, i32* %7, align 4
  ret i32 %139
}

declare dso_local %struct.TYPE_5__* @sqlite3MallocZero(i32) #1

declare dso_local i8* @sqlite3_mprintf(i8*, i8*, ...) #1

declare dso_local i32 @echoDestructor(i32*) #1

declare dso_local i32 @dequoteString(i8*) #1

declare dso_local i32 @sqlite3_free(i8*) #1

declare dso_local i32 @appendToEchoModule(i32, i8*) #1

declare dso_local i32 @echoDeclareVtab(%struct.TYPE_5__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
